--- a/style.css
+++ b/style.css
@@ -1,1 +1,51 @@
+@font-face {
+  font-family: "Outfit";
+  src: url(/Outfit/Outfit-VariableFont_wght.ttf);
+}
+body {
+  background-color: rgb(213, 225, 239);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  height: 100vh;
+}
+#container {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 460px;
+  flex-direction: column;
+  margin: 0 auto;
+  overflow: initial;
+  padding-top: 10px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+#qr {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: -20px;
+  padding: 10px;
+}
+#qr img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+#text {
+  text-align: center;
+  font-family: "outfit";
+  font-weight: 400 700;
+  padding: 10px;
+}
 
+#text p {
+  color: hsl(211, 9%, 47%);
+  font-size: 14px;
+}
+#text h1 {
+  font-size: 1.5rem;
+}
